--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -5,8 +5,31 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Client"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="700" Width="1280">
     <Grid>
-
+        <TextBox HorizontalAlignment="Left" Margin="35,232,0,0" TextWrapping="Wrap" 
+                 Text="" VerticalAlignment="Top" Width="590" Height="424" x:Name="InitialText" TextChanged="InitialTextChanged"/>
+        <TextBox HorizontalAlignment="Left" Margin="660,232,0,0" TextWrapping="Wrap" 
+                 Text="" VerticalAlignment="Top" Width="590" Height="424" x:Name="ConvertedText" IsReadOnly="True"/>
+        <Button Content="Загрузить файл с текстом" HorizontalAlignment="Left" Margin="35,42,0,0" VerticalAlignment="Top" 
+                RenderTransformOrigin="-0.485,-0.059" Height="59" Width="225" Click="LoadTextFromFile" FontSize="19"/>
+        <Button Content="Сохранить текст в файл" HorizontalAlignment="Left" Margin="35,122,0,0" VerticalAlignment="Top" 
+                RenderTransformOrigin="-0.485,-0.059" Height="58" Width="225" Click="SaveTextInFile" FontSize="19"/>
+        <ComboBox HorizontalAlignment="Left" Margin="295,52,0,0" VerticalAlignment="Top" Width="191" Height="38"
+                  SelectionChanged="EncryptionAlgorithmChanged" x:Name="EncryptionAlgorithms" FontSize="15"/>
+        <Label Content="Алгоритм шифрования:" HorizontalAlignment="Left" Margin="292,14,0,0"
+               VerticalAlignment="Top" RenderTransformOrigin="-0.009,0.113" FontSize="17" Width="194"/>
+        <TextBox HorizontalAlignment="Left" Margin="295,116,0,0" TextWrapping="Wrap" x:Name="EncryptionKey"
+                 Text="" VerticalAlignment="Top" Width="194" Height="24" FontSize="15" TextChanged="EncryptionKeyChanged"/>
+        <Label Content="Ключ шифрования:" HorizontalAlignment="Left" Margin="292,90,0,0"
+               VerticalAlignment="Top" Width="194" FontSize="15"/>
+        <Button Content="Зашифровать" x:Name="EncryptButton" HorizontalAlignment="Left" Margin="517,53,0,0" VerticalAlignment="Top"
+                RenderTransformOrigin="-0.065,-0.357" Height="37" Width="167" FontSize="16" Click="Encrypt" IsEnabled="false"/>
+        <Button Content="Расшифровать" x:Name="DecryptButton" HorizontalAlignment="Left" Margin="517,103,0,0" VerticalAlignment="Top"
+                RenderTransformOrigin="-0.065,-0.357" Height="37" Width="167" FontSize="16" Click="Decrypt" IsEnabled="false"/>
+        <Label Content="Исходный текст:" HorizontalAlignment="Left" Margin="35,201,0,0" VerticalAlignment="Top" Width="203" FontSize="15"/>
+        <Label Content="Преобразованный текст:" HorizontalAlignment="Left" Margin="660,201,0,0" VerticalAlignment="Top" Width="203" FontSize="15"/>
+        <Button Content="        Показать&#xD;&#xA;частотный словарь" HorizontalAlignment="Left"
+                Margin="1087,56,0,0" VerticalAlignment="Top" Height="45" Width="163" FontSize="15" Click="ShowFrequencyDictionary"/>
     </Grid>
 </Window>
